[gd_scene load_steps=11 format=2]

[ext_resource path="res://Nodes/Characters/GenericCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Characters/Enemies/AirShooterV.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Enemies/EnemyVFlier/Vflier1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Enemies/EnemyVFlier/Vflier2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Enemies/EnemyVFlier/Vflier3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Enemies/EnemyVFlier/Vflier4.png" type="Texture" id=6]
[ext_resource path="res://Nodes/Combat/Shooter.tscn" type="PackedScene" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "move",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20.4214, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20.5073, 10.2208 )

[node name="AirShooterV" type="Node2D"]

[node name="GenericCharacter" parent="." groups=[
"enemy",
] instance=ExtResource( 1 )]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="GenericCharacter" index="0"]
frames = SubResource( 1 )
animation = "move"

[node name="CollisionShape2D" parent="GenericCharacter" index="1"]
shape = SubResource( 2 )

[node name="Shooter" parent="GenericCharacter" instance=ExtResource( 7 )]
position = Vector2( -16.3661, -16.9209 )

[node name="FreeDeadNode" type="Timer" parent="GenericCharacter"]

[node name="Shoot" type="Timer" parent="GenericCharacter"]
wait_time = 1.5
autostart = true

[node name="HitBoxDamage" type="Area2D" parent="GenericCharacter" groups=[
"enemy",
]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GenericCharacter/HitBoxDamage"]
shape = SubResource( 3 )

[connection signal="timeout" from="GenericCharacter/FreeDeadNode" to="GenericCharacter" method="_on_FreeDeadNode_timeout"]
[connection signal="timeout" from="GenericCharacter/Shoot" to="GenericCharacter" method="_on_Shoot_timeout"]

[editable path="GenericCharacter"]

[editable path="GenericCharacter/Shooter"]
